syntax = "proto3";

package shared.user.v1;

enum UserGender {
  ANOTHER = 0;
  FEMALE = 1;
  MALE = 2;
}

enum ItemType {
  IMAGE = 0;
  VIDEO = 1;
  GIF = 2;
}

message Item {
  string id = 1;
  ItemType type = 2;
  string link = 3;
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string fullname = 4;
  UserGender UserGender = 5;
  string avatar = 6;
  string country = 7;

  string created_at = 99;
  string updated_at = 100;
}

message UserItem {
  string id = 1;
  string user_id = 2;
  Item item = 3;
}